# HPX_Benchmarks

./: .gitignore  README.md  load-env.sh
Daniel/reduction/: README.txt  reduction.cpp
Daniel/reduction/measurements/: 1_nodes.txt  3_nodes.txt  6_nodes.txt  8_nodes.txt
Daniel/reduction/measurements_qdr/: qdr_2_nodes.txt  qdr_4_nodes.txt  qdr_5_nodes.txt  qdr_7_nodes.txt
Daniel/reduction/measurements_rome/: rome_1_nodes.txt  rome_2_nodes.txt  rome_3_nodes.txt  rome_4_nodes.txt
Daniel/reduction/scripts/: load-env.sh
Daniel/scan/: CMakeLists.txt  README.txt  scan.cpp
Daniel/scan/measurements/: 2_nodes.txt  3_nodes.txt  4_nodes.txt  5_nodes.txt
Daniel/scan/measurements_qdr/: qdr_1_nodes.txt  qdr_2_nodes.txt  qdr_3_nodes.txt  qdr_4_nodes.txt  qdr_5_nodes.txt  qdr_6_nodes.txt  qdr_7_nodes.txt  qdr_8_nodes.txt
Daniel/scan/measurements_rome/: rome_1_nodes.txt  rome_2_nodes.txt  rome_3_nodes.txt  rome_4_nodes.txt
Daniel/scan/scripts/: launch.sh  launch_qdr  launch_rome
Daniel/transform/: CMakeLists.txt  README.txt  transform.cpp
Daniel/transform/measurements/: 1_nodes.txt  2_nodes.txt  3_nodes.txt
Daniel/transform/measurements_qdr/: qdr_5_nodes.txt  qdr_6_nodes.txt  qdr_7_nodes.txt  qdr_8_nodes.txt
Daniel/transform/scripts/: 4_nodes.txt  (+1 more)
HPX_Programs/reduction/: CMakeLists.txt  README.txt  reduction.cpp
HPX_Programs/scan/: scan.cpp
HPX_Programs/transform/: CMakeLists.txt  README.txt  transform.cpp
HPX_Programs/transform/measurements_qdr/: qdr_1_nodes.txt  qdr_2_nodes.txt  qdr_3_nodes.txt  qdr_4_nodes.txt  qdr_5_nodes.txt  qdr_6_nodes.txt  qdr_7_nodes.txt  qdr_8_nodes.txt
HPX_Programs/transform/measurements_rome/: rome_1_nodes.txt  rome_4_nodes.txt
HPX_Programs/transform/scripts/: launch_qdr  launch_rome
HPX_Programs/transform/scripts/launch_qdr/: launch_qdr_1  launch_qdr_2  launch_qdr_3  launch_qdr_4  launch_qdr_5  launch_qdr_6  launch_qdr_8  launch_qdr_hpxcounter
nikita/: CMakeLists.txt  correct_runtime_test.cpp  custom_time_measurement.cpp  hello_world_distributed.cpp  reduction.cpp  transform.cpp
nikita/scripts/: outROME_transfrom.txt  runROME_TRANSFORM.sh  test.txt  transform_rome.csv
numa_v1/: CMakeLists.txt
numa_v1/benchmark/: reduction.cpp  transform.cpp
numa_v1/include/: allocator_adaptor.hpp  arenaV3.hpp  numa_adaptor.hpp
numa_v1/scripts/: benchmark_qdr.txt  benchmark_qdr1.txt  benchmark_qdr2.txt  benchmark_qdr3.txt  benchmark_qdr4.txt  benchmark_qdr5.txt  benchmark_qdr6.txt  benchmark_qdr7.txt  benchmark_qdr8.txt  benchmark_rome.txt  benchmark_rome1.txt  benchmark_rome2.txt  benchmark_rome3.txt  benchmark_rome4.txt  launch_qdr  launch_rome  load-env.sh  reduction_qdr.csv  reduction_qdr1.csv  reduction_qdr2.csv  reduction_qdr3.csv  reduction_qdr4.csv  reduction_qdr5.csv  reduction_qdr6.csv  reduction_qdr7.csv  reduction_qdr8.csv  reduction_rome.csv  reduction_rome1.csv  reduction_rome2.csv  reduction_rome3.csv  reduction_rome4.csv  transform_qdr1.csv  transform_qdr2.csv  transform_qdr3.csv  transform_qdr4.csv  transform_qdr5.csv  transform_qdr6.csv  transform_qdr7.csv  transform_qdr8.csv  transform_rome1.csv  (+3 more)
plots/: plot.py
plots/baseline/: plot.py
(+63 files in other folders)
